--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: gpt_markdown
 description: "Powerful Markdown & LaTeX Renderer for Flutter: Rich Text, Math, Tables, Links, and Text Selection. Ideal for ChatGPT, Gemini, and more."
-version: 1.0.16
+version: 1.0.17
 homepage: https://github.com/Infinitix-LLC/gpt_markdown
 
 environment:
@@ -18,6 +18,10 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
+  fonts:
+    - family: JetBrainsMono
+      fonts:
+        - asset: lib/fonts/JetBrainsMono-Regular.ttf
 
 topics:
   - markdown
