--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.5.0 <4.0.0'
+  sdk: '>=2.18.6 <4.0.0'
 dependencies:
   flutter:
     sdk: flutter
@@ -13,13 +13,18 @@ dependencies:
   cupertino_icons: ^1.0.2
   gpt_markdown:
     path: ../../gpt_markdown
-  flutter_math_fork: ^0.7.2
-  watcher: ^1.1.0
-  desktop_drop: ^0.4.4
+  printing: ^5.10.3
+  pdf: ^3.10.1
+  flutter_html_to_pdf: ^0.7.0
+  url_launcher: ^6.1.10
+  path_provider: ^2.0.14
+  permission_handler: ^10.2.0
+  file_picker: ^5.2.10
+  flutter_math_fork: ^0.8.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^2.0.0
 flutter:
   uses-material-design: true
